# tidyout

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/superpowers/specs/: 2026-05-12-tidyout-design.md
tests/: test_cli.py  test_stripper.py
tidyout/: cli.py  init_agent.py  runner.py  stripper.py
tidyout/rules/: cargo_build.yaml  docker_logs.yaml  docker_ps.yaml  find.yaml  git_log.yaml  git_status.yaml  jest.yaml  ls.yaml  make.yaml  npm_install.yaml  pip_install.yaml  pytest.yaml  tree.yaml
