[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidyout-cli"
version = "0.1.0"
description = "CLI wrapper that compresses command output for AI agents, reducing token usage by 60-97%"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["cli", "ai", "tokens", "compression", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
tidy = "tidyout.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tidyout"]

[tool.pytest.ini_options]
testpaths = ["tests"]
